@@ -144,6 +144,7 @@ PHP                                                                        NEWS
   seg fault). (Dmitry)
 - Fixed bug #32937 (open_basedir looses trailing / in the limiter). (Adam Conrad)
 - Fixed bug #32589 (possible crash inside imap_mail_compose() function). (Ilia)
+- Fixed bug #32179 (xmlrpc_encode() segfaults with recursive references). (Tony)
 - Fixed bug #32139 (SOAP client does not auto-handle base64 encoding). (Ilia)
 - Fixed bug #32010 (Memory leak in mssql_fetch_batch). (fmk)
 - Fixed bug #29334 (win32 mail() provides incorrect Date: header). (Jani)
